--- a/PIGrupo03/bin/.gitignore
+++ b/PIGrupo03/bin/.gitignore
@@ -1,7 +1,5 @@
-/controle/
-/componentesGUIPrincipal/
-/view/
-/componentesGUILogin/
-/crud/
 /modelo/
-/log/
+/crud/
+/componentesGUILogin/
+/snippet/
+/testes/
